Added changes for final presentation
