# client.core/src/main/resources/api.yaml
@@ -375,3 +375,13 @@ components:
           type: integer
           format: int32
           description: the id of the created entity
+  securitySchemes:
+    oAuth:
+      type: oauth2
+      description: This API uses OAuth2 with the password flow
+      flows:
+        password:
+          tokenUrl: /oauth/token
+          scopes:
+            read: get information from the API
+            write: use the API to make changes to the supporting data model
